--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yLoader</title>
+	<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+	<meta name="apple-mobile-web-app-title" content="yLoader" />
+	<link rel="manifest" href="/site.webmanifest" />
     <style>
         body, html {
             margin: 0;
